# RAG_Langchain

./: .gitignore  docker-compose.yml  readme.md
qdrant_data/: raft_state.json
src/backend/: Dockerfile  _Dockerfile  __init__.py  config.yaml  error.log.1  pyproject.toml  readme  readme.md  requirements.txt  routes.py
src/backend/common/: Dockerfile  prompts.yaml  utils.py
src/backend/embedding/: langchain_rag.py
src/backend/embedding_test/: langchain_rag_jupyter.ipynb
src/backend/model/: pdf_metadata.py
src/backend/output/: result.json
src/backend/service/: _question_answer.py  document_processor.py  firebase.py  helper.py  question_answer.py  test.py  vector_store.py
src/backend/src/: prompts.yaml
src/backend/test/: pdf_split_test.py  test.py  test_access.py
src/backend/test/embedding_test/: langchain_rag_jupyter.ipynb
src/backend/test/pdf_test/: result.json
src/common/: prompts.yaml  utils.py
src/frontend/: Dockerfile  README.md  app.py  pyproject.toml
src/frontend/.streamlit/: config.toml
src/frontend/conf/: default.conf
src/frontend/nginx/config.d/: default.conf
