[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["DY Lim <dlagus6412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.1"
streamlit-js-eval = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
